# CodeForBielefeld-OSS-LLMs

./: .gitignore  OpenSource-LLMs-CodeForBielefeld-DE.html  OpenSource-LLMs-CodeForBielefeld.html  OpenSource-LLMs-CodeForBielefeld.pptx  OpenSource-LLMs-Teaser.html  make_slides.py  plan.md  pyproject.toml  slides_template.html  teaser_template.html  test_token_speeds.py
.claude/: launch.json
experiments/: 01_hook_chat.py  02_token_speed.py  03_ram_usage.py  04_vision_json.py  05_quantization_compare.py  06_coding_compare.py  README.md  _common.py  output_0.2.txt
experiments/lora/: prepare_dataset.py  train_lora.py
